tests/cases/scc/error/0008-unmatchedcppelse.c.res
./tests/cases/scc/error/0008-unmatchedcppelse.c:8:1:	error:   unmatched #else.
exit code 1
